2003-11-02  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/descriptions/unsupported.desc: Added Plustek OpticSlim 2400.
	* include/sanei/sanei_thread.h: Removed OS/2 porting section.
	* sanei/sanei_pp.c include/sanei/sanei_pp.h:
	  Fixed udelay stuff, documentation update.

2003-11-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/Makefile.in: sanei_pp must be linked if we preload
	  backends.

---- FEATURE FREEZE FOR SANE 1.0.13 ---
-- snapshot 1.0.12-pre2

2003-11-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added PIE Powerslide 3600.
	* NEWS: Updated for 1.0.13.

2003-10-30  Gerhard Jaeger <gerhard@gjaeger.de>
	* sanei/lib/sanei_pp.c: Made sanei_pp_set_datadir work in no ieee1284 mode.
	  Fixed a minor bug in delay calculation.
	* include/sanei/sanei_pp.h: Added some control-port definitions.
	* backend/plustek_pp.c backend/plustek-pp*:
	  Made PS/2 bidirectional mode work.
	* doc/plustek/PLUSTEK-PARPORT.txt: Update.

2003-10-29  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/Makefile.in backend/mustek.c backend/mustek.h
	  doc/descriptions/mustek.desc doc/mustek/mustek.CHANGES:
	  Added support for sanei_thread. Removed OS/2 specific code.
	  Added more debug messages.
	* doc/saned.man: Added more info about firewall trouble.

2003-10-29  Gerhard Jaeger <gerhard@gjaeger.de>
	* sanei/lib/sanei_pp.c include/sanei/sanei_pp.h:
	  Added functions sanei_pp_set_datadir() and sanei_pp_uses_directio().
	  Added some documentation.
	* doc/plustek/PLUSTEK-PARPORT.txt doc/plustek/PLUSTEK-PARPORT-TODO.txt
	  doc/plustek/PLUSTEK-USB-TODO.txt: Updates.
	* backend/plustek_pp.c backend/plustek-pp_*: Made usage of the new
	  sanei_pp functions, made EPP modes work with libieee1284. Also some
	  cleanup work.

2003-10-28  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/sane-scsi.man: Added hint for setting device permissions for
	  /dev/xpt0 for FreeBSD users.